--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.application.name=Job_Post
-spring.datasource.url=jdbc:postgresql://localhost:5333/job_post
-spring.datasource.username=farhadrehimov
-spring.datasource.password=Javid_App
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+
+
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.format_sql=true
@@ -9,13 +19,14 @@ spring.jpa.show-sql=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.security.oauth2.client.registration.google.client-id=794250810019-j2la544lgt8pticntr5epeusga3klitp.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=frahimov2006@gmail.com
-spring.mail.password=sopq ihrp tkln rivl
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -23,4 +34,3 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
