--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,6 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 
-
-
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.format_sql=true
 spring.jpa.show-sql=true
@@ -34,3 +31,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+server.port=${PORT:8080}
